@@ -172,7 +172,7 @@ public final class TransformTaskSupport {
             return List.of();
         }
         if (list.size() == 1) {
-            IonValue value = list.get(0);
+            IonValue value = list.getFirst();
             if (value instanceof IonStruct || value instanceof IonList) {
                 return value;
             }
